style and graphics

--- a/content/style/_util.sass
+++ b/content/style/_util.sass
@@ -1,4 +1,6 @@
 
+$header-height: 40px
+$foot-height: 40px
 $main-width: 750px
 $main-padding: 10px
 $font-size: 14pt
@@ -21,3 +23,6 @@ $font-size: 14pt
 @mixin rownav
   @include block
   @include row
+
+.spacer1
+  height: 50px
