--- a/content/style/style.sass
+++ b/content/style/style.sass
@@ -1,7 +1,26 @@
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans|Exo+2:800,400,400italic,700,700italic|Alegreya:400,900,400italic,700,700italic)
+@import url("hl-xcode.css")
 @import util
 @import nav
+@import ed
 
 #main
   line-height: 160%
+
+pre
+  margin-left: 5px
+  border-left: 5px solid purple
+  padding-left: 5px
+
+
+table
+  border: 2px solid black
+  border-collapse: collapse
+  th
+    color: white
+    background-color: black
+    text-align: left
+  th, td
+    padding-left: 8px
+    padding-right: 8px
