small style tweaks

--- a/content/style/_nav.sass
+++ b/content/style/_nav.sass
@@ -111,10 +111,9 @@ $perrow: 2
 #main-container
   background-color: #eee
   flex-grow: 1
-  /* height: 100%
-  overflow: auto
   #main
     @include block
+    padding-top: 30px
 
 #foot-container
   background-color: #5e2d0c
