--- a/content/style/_nav.sass
+++ b/content/style/_nav.sass
@@ -26,6 +26,9 @@ body
   /* font-family: 'Alegreya'
   /* font-weight: 900
 
+#nav > a
+  text-decoration: none
+
 .navlink > a
   line-height: $header-height
   display: inline-block
@@ -127,17 +130,15 @@ $perrow: 2
   position: fixed
   left: 0px
   top: 0px
-  /* border: 2px solid black
   height: 100%
-  padding-top: $header-height + 20px
-  padding-bottom: $foot-height + 40px
+  padding-top: $header-height
+  padding-bottom: $foot-height
   width: 400px
   box-sizing: border-box
-  overflow: auto
-  .sidenav-contents
-    position: relative
+  #sidebar-contents
     height: 100%
     overflow: auto
+
 
 ul.toc
   padding-left: 30px
