--- a/content/style/_nav.sass
+++ b/content/style/_nav.sass
@@ -14,6 +14,7 @@ body
   margin: 0px
 
 #page
+  @include column
   height: 100%
 
 
@@ -44,6 +45,7 @@ body
   position: fixed
   left: 0px
   top: 0px
+  z-index: 100
 
 #main-container
   margin-top: $header-height
