--- a/content/style/_nav.sass
+++ b/content/style/_nav.sass
@@ -138,6 +138,7 @@ $perrow: 2
   width: 400px
   box-sizing: border-box
   #sidebar-contents
+    position: relative
     height: 100%
     overflow: auto
 
