document new features

--- a/content/style/style.sass
+++ b/content/style/style.sass
@@ -27,6 +27,12 @@ table
     padding-right: 8px
 
 
+blockquote
+  margin-left: 10px
+  padding-left: 10px
+  border-left: 5px solid #88f
+
+
 .error
   color: red
   font-weight: bold
