--- a/content/style/style.sass
+++ b/content/style/style.sass
@@ -1,5 +1,5 @@
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans|Exo+2:800,400,400italic,700,700italic|Alegreya:400,900,400italic,700,700italic)
+@import url("//fonts.googleapis.com/css?family=Open+Sans|Exo+2:800,400,400italic,700,700italic|Alegreya:400,900,400italic,700,700italic")
 @import url("hl-xcode.css")
 @import util
 @import nav
