--- a/content/style/style.sass
+++ b/content/style/style.sass
@@ -37,6 +37,13 @@ blockquote
   color: red
   font-weight: bold
 
+div.error
+  white-space: pre
+  font-size: 11pt
+  color: red
+  line-height: 120%
+  font-weight: bold
+
 
 ul.toc code
   font-size: 10pt
