more error formatting

--- a/content/style/style.sass
+++ b/content/style/style.sass
@@ -38,6 +38,8 @@ blockquote
   font-weight: bold
 
 div.error
+  margin-top: 10px
+  margin-bottom: 10px
   white-space: pre
   font-size: 11pt
   color: red
