--- a/content/style/_nav.sass
+++ b/content/style/_nav.sass
@@ -1,8 +1,8 @@
 
 @import util
 
-html
-  height: 100%
+/* html
+/*   height: 100%
 
 body
   @include column
@@ -10,12 +10,12 @@ body
   font-family: 'Alegreya', serif
   /* font-family: 'Exo 2', sans-serif
   font-size: $font-size
-  height: 100%
+  /* height: 100%
   margin: 0px
 
 #page
   @include column
-  height: 100%
+  /* height: 100%
 
 
 #logo-link
