comparison in carousel vertical when screen narrow

--- a/content/style/style.sass
+++ b/content/style/style.sass
@@ -80,3 +80,9 @@ ul.toc code
       font-weight: bold
       color: white
       font-family: Alegreya
+
+
+@media screen and (max-width: $main-width + $sidebar-width * 2 + 100px)
+  #comparison .comparison
+    @include column
+
