min-height: 100vh

--- a/content/style/_nav.sass
+++ b/content/style/_nav.sass
@@ -1,8 +1,8 @@
 
 @import util
 
-/* html
-/*   height: 100%
+html
+  min-height: 100vh
 
 body
   @include column
@@ -10,12 +10,12 @@ body
   font-family: 'Alegreya', serif
   /* font-family: 'Exo 2', sans-serif
   font-size: $font-size
-  /* height: 100%
+  min-height: 100vh
   margin: 0px
 
 #page
   @include column
-  /* height: 100%
+  min-height: 100vh
 
 
 #logo-link
